--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -239,6 +239,7 @@ jobs:
 
   - script: |
       choco install --accept-license -y Ninja llvm
+      set "PATH=%PATH%;C:/Program Files/LLVM/bin/"
     displayName: 'Dependencies'
 
   - task: CMake@1
