--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -239,6 +239,7 @@ jobs:
 
   - script: |
       choco install --accept-license -y Ninja llvm
+      call "C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\Common7\Tools\VsDevCmd.bat"
     displayName: 'Dependencies'
 
   - task: CMake@1
