--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -245,6 +245,7 @@ jobs:
       call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\Tools\VsDevCmd.bat"
       cmake .. $(CMakeArgs) -DCMAKE_BUILD_TYPE=$(BuildType) -DSNMALLOC_CI_BUILD=On -DSNMALLOC_RUST_SUPPORT=On
       cmake --build . --config ${BuildType}
+    workingDirectory: build
     displayName: 'build'
 
   - script: |
