fix 1mib layout

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -234,6 +234,7 @@ if(NOT DEFINED SNMALLOC_ONLY_HEADER_LIBRARY)
     if (SNMALLOC_STATIC_LIBRARY)
       add_shim(snmallocshim-static STATIC ${SHARED_FILES})
       add_shim(snmallocshim-1mib-static STATIC ${SHARED_FILES})
+      target_compile_definitions(snmallocshim-1mib-static PRIVATE IS_ADDRESS_SPACE_CONSTRAINED)
     endif ()
     add_shim(snmallocshim SHARED ${SHARED_FILES})
     add_shim(snmallocshim-1mib SHARED ${SHARED_FILES})
