fix windows and sync w/ upstream

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,15 @@ matrix:
       language: rust
       rust:
         - nightly
-      env:
-        - MINGW64_BIN=C:\\tools\\msys64\\mingw64\\bin
 
     - os: windows
       language: rust
       rust:
         - stable
       before_script:
+        - choco install visualstudio2019community
+        - choco install visualstudio2019-workload-nativedesktop
+        - export VS160COMNTOOLS="/c/Program Files (x86)/Microsoft Visual Studio/2019/Community/Common7/Tools"
         - rustup toolchain install stable-x86_64-pc-windows-msvc
         - rustup default stable-msvc
 
@@ -20,6 +21,9 @@ matrix:
       rust:
         - nightly
       before_script:
+        - choco install visualstudio2019community
+        - choco install visualstudio2019-workload-nativedesktop
+        - export VS160COMNTOOLS="/c/Program Files (x86)/Microsoft Visual Studio/2019/Community/Common7/Tools"
         - rustup toolchain install nightly-x86_64-pc-windows-msvc
         - rustup default nightly-msvc
 
@@ -78,41 +82,9 @@ matrix:
       rust:
         - nightly
         
-
-
-before_install:
-- |-
-    case $TRAVIS_OS_NAME in
-      windows)
-        [[ ! -f C:/tools/msys64/msys2_shell.cmd ]] && rm -rf C:/tools/msys64
-        choco uninstall -y mingw
-        choco upgrade --no-progress -y msys2
-        export msys2='cmd //C RefreshEnv.cmd '
-        export msys2+='& set MSYS=winsymlinks:nativestrict '
-        export msys2+='& C:\\tools\\msys64\\msys2_shell.cmd -defterm -no-start'
-        export mingw64="$msys2 -mingw64 -full-path -here -c "\"\$@"\" --"
-        export msys2+=" -msys2 -c "\"\$@"\" --"
-        $msys2 pacman --sync --noconfirm --needed mingw-w64-x86_64-toolchain
-        ## Install more MSYS2 packages from https://packages.msys2.org/base here
-        taskkill //IM gpg-agent.exe //F  # https://travis-ci.community/t/4967
-        export PATH=/C/tools/msys64/mingw64/bin:$PATH
-        export MAKE=mingw32-make  # so that Autotools can find it
-        ;;
-    esac
-
-before_cache:
-- |-
-    case $TRAVIS_OS_NAME in
-      windows)
-        # https://unix.stackexchange.com/a/137322/107554
-        $msys2 pacman --sync --clean --noconfirm
-        ;;
-    esac
-
 cache:
     directories:
     - $HOME/AppData/Local/Temp/chocolatey
-    - /C/tools/msys64
     
 script:
   - cargo test --all
