Add missing QEMU build flag.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -140,7 +140,7 @@ jobs:
         CXX: clang++-9
         BuildType: Debug
         SelfHost: false
-        CMakeArgs: ''
+        CMakeArgs: '-DSNMALLOC_QEMU_WORKAROUND=On'
         Image: snmallocciteam/build_linux_arm64:latest
 
       64-bit Clang-9 Release:
@@ -148,7 +148,7 @@ jobs:
         CXX: clang++-9
         BuildType: Release
         SelfHost: false
-        CMakeArgs: ''
+        CMakeArgs: '-DSNMALLOC_QEMU_WORKAROUND=On'
         Image: snmallocciteam/build_linux_arm64:latest
 
       32-bit Clang-9 Debug:
@@ -156,7 +156,7 @@ jobs:
         CXX: clang++-9
         BuildType: Debug
         SelfHost: false
-        CMakeArgs: ''
+        CMakeArgs: '-DSNMALLOC_QEMU_WORKAROUND=On'
         Image: snmallocciteam/build_linux_armhf:latest
 
       32-bit Clang-9 Release:
@@ -164,7 +164,7 @@ jobs:
         CXX: clang++-9
         BuildType: Release
         SelfHost: false
-        CMakeArgs: ''
+        CMakeArgs: '-DSNMALLOC_QEMU_WORKAROUND=On'
         Image: snmallocciteam/build_linux_armhf:latest
   
   steps:
