--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "snmalloc-rs"
-version = "0.2.16"
+version = "0.2.17"
 authors = ["schrodingerzhu <i@zhuyi.fan>"]
 edition = "2018"
 license = "MIT"
@@ -16,10 +16,14 @@ readme = "README.md"
 members = ["snmalloc-sys" ]
 
 [dependencies]
-snmalloc-sys = {version = "0.2.16", path = "snmalloc-sys"}
+snmalloc-sys = {version = "0.2.17", path = "snmalloc-sys"}
 
 [features]
+default = ["1mib"]
 1mib = ["snmalloc-sys/1mib"]
+16mib = ["snmalloc-sys/16mib"]
+qemu = ["snmalloc-sys/qemu"]
+stats = ["snmalloc-sys/stats"]
 debug = ["snmalloc-sys/debug"]
 cache-friendly = ["snmalloc-sys/cache-friendly"]
 android-lld = ["snmalloc-sys/android-lld"]
