--- a/snmalloc-sys/Cargo.toml
+++ b/snmalloc-sys/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "snmalloc-sys"
-version = "0.2.16"
+version = "0.2.17"
 authors = ["schrodingerzhu <i@zhuyi.fan>"]
 edition = "2018"
 license = "MIT"
@@ -20,7 +20,11 @@ version = "0.2"
 default-features = false
 
 [features]
+default = ["1mib"]
 1mib = []
+16mib = []
+qemu = []
+stats = []
 debug = []
 cache-friendly = []
 android-lld = []
